tests/baselines/reference/declarationEmitPathMappingMonorepo.errors.txt
packages/b/src/index.ts(1,1): error TS18055: Declaration file contains synthesized type reference directives: '"@ts-bug/a"'


==== packages/b/tsconfig.json (0 errors) ====
    {
        "compilerOptions": {
            "outDir": "dist",
            "declaration": true,
            "baseUrl": ".",
            "paths": {
                "@ts-bug/a": ["../a"]
            }
        }
    }
    
    
==== packages/b/src/index.ts (1 errors) ====
    import { a } from "@ts-bug/a";
    ~~~~~~
!!! error TS18055: Declaration file contains synthesized type reference directives: '"@ts-bug/a"'
    
    export function b(text: string) {
      return a(text);
    }
==== packages/a/index.d.ts (0 errors) ====
    declare module "@ts-bug/a" {
        export type AText = {
          value: string;
        };
        export function a(text: string): AText;
      }
      